syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";

option csharp_namespace = "Kafka.Reader.Api";
option go_package = "kafka_reader_api";

package kafka_reader_api;

service KafkaService {
  rpc ReadMessages(ReadMessages.ReadMessagesQuery) returns (stream ReadMessages.ReadMessagesQueryResponse);
  rpc ProduceMessages(ProduceMessages.ProduceMessagesCommand) returns (stream ProduceMessages.ProduceMessagesCommandResponse);
  rpc GetClusterMetadata(GetClusterMetadata.GetClusterMetadataQuery) returns (GetClusterMetadata.GetClusterMetadataQueryResponse);
  rpc GetTopicPartitionsWithOffsets(GetTopicPartitionsWithOffsets.GetTopicPartitionsWithOffsetsQuery) returns (GetTopicPartitionsWithOffsets.GetTopicPartitionsWithOffsetsQueryResponse);
  rpc GetTopicLags(GetTopicLags.GetTopicLagsQuery) returns (stream GetTopicLags.GetTopicLagsQueryResponse);
}

message ReadMessages {
  message ReadMessagesQuery {
    ConnectionSettingsDto connection_settings = 1;
    string topic = 2;
    MessageFormatDto key_format = 3;
    MessageFormatDto body_format = 4;
    StartFromDto start_from = 5;
    ReadLimitDto limit = 6;
    ValueFilterDto body_filter = 7;
    ValueFilterDto key_filter = 8;
  }
  message StartFromDto {
    oneof from {
      FromBeginningDto from_beginning = 1;
      FromLatestDto from_latest = 2;
      FromTodayDto from_today = 3;
      FromTimeDto from_time = 4;
    }
    message FromBeginningDto {}
    message FromLatestDto {}
    message FromTodayDto {}
    message FromTimeDto {
      google.protobuf.Timestamp day = 1;
    }
  }
  message ValueFilterDto {
    FilterKindDto filter_kind = 1;
    Condition condition = 2;
    message Condition {
      oneof condition {
        Contains contains = 1;
        NotContains not_contains = 2;
      }
    }
    message Contains {}
    message NotContains {}
  }
  message FilterKindDto {
    oneof kind {
      StringValueDto string_value = 1;
      RegexValueDto regex_value = 2;
    }
  }
  message StringValueDto {
    string value = 1;
  }
  message RegexValueDto {
    string value = 1;
  }
  message ReadLimitDto {
    oneof limit {
      NoLimitDto no_limit = 1;
      MessageCountDto message_count = 2;
      ToTimeDto to_time = 3;
    }
    message NoLimitDto {}
    message MessageCountDto {
      uint64 count = 1;
    }
    message ToTimeDto {
      google.protobuf.Timestamp time = 1;
    }
  }

  message ReadMessagesQueryResponse {
    oneof response {
      KafkaMessageDto kafka_message = 1;
      MessagesCountersDto counters = 2;
      ErrorDto error = 3;
    }
  }
  message KafkaMessageDto {
    int32 partition = 1;
    int64 offset = 2;
    google.protobuf.Timestamp timestamp = 3;
    google.protobuf.StringValue key = 4;
    google.protobuf.StringValue body = 5;
    map<string, string> headers = 6;
  }
  message MessagesCountersDto {
    uint64 read_count = 1;
    uint64 returned_count = 2;
  }

}

message ProduceMessages {
  message ProduceMessagesCommand {
    ConnectionSettingsDto connection_settings = 1;
    string topic = 2;
    MessageFormatDto key_format = 3;
    MessageFormatDto body_format = 4;
    repeated ProduceMessageDto messages = 5;
  }
  message ProduceMessageDto {
    google.protobuf.Int32Value partition = 1;
    google.protobuf.StringValue key = 2;
    google.protobuf.StringValue body = 3;
    map<string, string> headers = 4;
  }
  message ProduceMessagesCommandResponse {
    oneof response {
      DeliveryResultDto delivery_result = 1;
      ErrorDto error = 2;
    }
  }

  message DeliveryResultDto {
    int32 partition = 1;
    int64 offset = 2;
  }
}

message MessageFormatDto {
  oneof format {
    StringFormatDto string_format = 1;
    HexFormatDto hex_format = 2;
    Base64FormatDto base64_format = 3;
    ProtoFormatDto proto_format = 4;
  }
  message StringFormatDto {}
  message Base64FormatDto {}
  message HexFormatDto {}
  message ProtoFormatDto {
    oneof decode_way {
      SingleProtoFileDto raw_proto_file = 1;
      ProtoTarArchiveFilesDto tar_archive = 2;
    }
    message SingleProtoFileDto {
      string message_type_name = 1;
      string file = 2;
    }
    message ProtoTarArchiveFilesDto {
      BytesOrBase64DataDto data = 1;
      string target_file_path = 2;
      string message_type_name = 3;
      ArchiveDecompressionDto decompression = 4;
    }
    enum ArchiveDecompressionDto {
      None = 0;
      Gzip = 1;
    }
    message BytesOrBase64DataDto {
      oneof data {
        bytes data_bytes = 1;
        string data_base64 = 2;
      }
    }
  }
}

message SecurityProtocolDto {
  oneof protocol {
    PlaintextProtocolDto plaintext = 1;
    SslProtocolDto ssl = 2;
    SaslPlaintextProtocolDto sasl_plaintext = 3;
    SaslSslProtocolDto sasl_ssl = 4;
  }
  message PlaintextProtocolDto {};
  message SslProtocolDto {};
  message SaslPlaintextProtocolDto {
    SaslMechanismDto sasl_mechanism = 1;
  };
  message SaslSslProtocolDto {
    SaslMechanismDto sasl_mechanism = 1;
  };
}

message SaslMechanismDto {
  oneof mechanism{
    ConstantTokenDto constant_token = 1;
    BearerClientCredentialsDto bearer_client_credentials = 2;
  }
  message ConstantTokenDto {
    string token_value = 1;
  }
  message BearerClientCredentialsDto {
    string open_id_configuration_url = 1;
    string client_id = 2;
    string client_secret = 3;
  }
}

message GetClusterMetadata {
  message GetClusterMetadataQuery {
    ConnectionSettingsDto connection_settings = 1;
  }

  message GetClusterMetadataQueryResponse {
    repeated KafkaBrokerMetadataDto brokers = 1;
    repeated KafkaTopicMetadataDto topics = 2;
  }
  message KafkaBrokerMetadataDto {
    string host = 1;
    uint32 port = 2;
  }
  message KafkaTopicMetadataDto {
    string topic_name = 1;
    uint32 partitions_count = 2;
  }
}

message GetTopicPartitionsWithOffsets {
  message GetTopicPartitionsWithOffsetsQuery {
    ConnectionSettingsDto connection_settings = 1;
    string topic = 2;
  }

  message GetTopicPartitionsWithOffsetsQueryResponse {
    repeated PartitionDataWatermarksDto partitions = 1;
  }
  message PartitionDataWatermarksDto {
    int32 id = 1;
    int64 min_offset = 2;
    int64 max_offset = 3;
    int64 messages_count = 5;
  }
}

message GetTopicLags {
  message GetTopicLagsQuery {
    ConnectionSettingsDto connection_settings = 1;
    string topic = 2;
    google.protobuf.StringValue group_search = 3;
  }

  message GetTopicLagsQueryResponse {
    oneof response {
      GroupLagsDto lags = 1;
      ErrorDto error = 2;
    }
  }
  message GroupLagsDto {
    repeated GroupTopicLagDto group_topic_lags = 1;
  }
  message GroupTopicLagDto {
    string group_id = 1;
    string group_state = 2;
    string topic = 3;
    repeated GroupTopicPartitionLagDto PartitionLagDto = 4;
  }
  message GroupTopicPartitionLagDto {
    int32 partition = 2;
    int64 lag = 3;
  }
}

message ConnectionSettingsDto {
  repeated string brokers = 1;
  SecurityProtocolDto security_protocol = 2;
}

message ErrorDto {
  string message = 1;
}
